CHANGES
=======

* Add Sphinx support
* Update 'gerrit change comments list' command
* Add option '-d/--draft' to 'gerrit change comment list' command
* Add new 'gerrit change comment list' command
* Check the response not empty before fetching columns
* Replace special characters in {change\_id} using the %xx escape
* Add new 'gerrit change index' command
* Add new 'gerrit change included-in show' command
* Add new 'gerrit change draft publish' command
* Add new 'gerrit change assignee delete' command
* Add new 'gerrit change assignee set' command
* Add new 'gerrit change assignee history show' command
* Add new 'gerrit change assignee show' command
* Add new 'gerrit change delete' command
* Add new 'gerrit change submit' command
* Add new 'gerrit change move' command
* Add new 'gerrit change rebase' command
* Add new 'gerrit change revert' command
* Add new 'gerrit change restore' command
* Add new 'gerrit change abandon' command
* Add new 'gerrit change create' command
* Add new 'gerrit change topic delete' command
* Add new 'gerrit change topic set' command
* Add new 'gerrit change topic show' command
* Add '-o/--option' to 'gerrit change list' command
* Add new 'gerrit change list' command
* Add '-o/--option' to 'gerrit change show' command
* Add '-a/-all' argument to 'gerrit change show'
* Add new 'gerrit change show' command
* Add new 'gerrit server task delete' command
* Add new 'gerrit server task show' command
* Add new 'gerrit server task list' command
* Add new 'gerrit server state show' command
* Add new 'gerrit server cache flush' command
* Remove 'gerrit server cache-info download' command
* Add new 'gerrit server cache show' command
* Make names of Gerrit server related code more obvious
* Add new 'gerrit server cache list' command
* Add new 'gerrit server cache-info download' command
* Add new 'gerrit server capabilities download' command
* Add new 'gerrit server configuration download' command