@@ -1,8 +1,9 @@
-=================================
-python-gerritclient documentation
-=================================
+===================
+python-gerritclient
+===================
 
-This is a CLI tool and Python API wrapper for Gerrit Code Review.
+This is a CLI tool and Python API wrapper for
+`Gerrit Code Review <https://www.gerritcodereview.com/>`_.
 
 User Documentation
 ------------------
