@@ -57,6 +57,7 @@ gerritclient =
     change_comment_list=gerritclient.commands.change:ChangeCommentList
     change_delete=gerritclient.commands.change:ChangeDelete
     change_draft_publish=gerritclient.commands.change:ChangeDraftPublish
+    change_fix=gerritclient.commands.change:ChangeFix
     change_included-in_show=gerritclient.commands.change:ChangeIncludedInSHow
     change_index=gerritclient.commands.change:ChangeIndex
     change_move=gerritclient.commands.change:ChangeMove
